CRUD endpoints done

--- a/scribble-pad-be/src/main/resources/application.yml
+++ b/scribble-pad-be/src/main/resources/application.yml
@@ -17,5 +17,6 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/scribble-pad
           jwk-set-uri: http://localhost:8080/realms/scribble-pad/protocol/openid-connect/certs
-          
-
+#logging:
+#  level:
+#    '[org.springframework.jdbc.core]': TRACE 
